<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B3ED"
    tools:context=".login">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="69dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/login"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="313dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="158dp"
        android:fontFamily="cursive"
        android:text="@string/Login_"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="122dp"
        android:layout_height="29dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="259dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/login_username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="363dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/login_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="231dp"
        android:layout_height="51dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="299dp"
        android:ems="10"
        android:hint="@string/login_username_"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="231dp"
        android:layout_height="51dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="410dp"
        android:ems="10"
        android:hint="@string/login_password_"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:layout_marginTop="569dp"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="466dp"
        android:text="CheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>