<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B3ED"
    tools:context=".addTask">

    <!-- Task Name Label -->

    <!-- Task Name Input -->

    <!-- Task Description Label -->

    <!-- Task Description Input -->

    <!-- Task Date Label -->

    <!-- CalendarView for Date Selection -->

    <!-- Task Time Label -->

    <CalendarView
        android:id="@+id/calendarView3"
        android:layout_width="348dp"
        android:layout_height="297dp"
        android:layout_marginTop="348dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="316dp"
        android:layout_height="76dp"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/task"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="161dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/task_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="189dp"
        android:hint="@string/task_name_h"
        android:inputType="text"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/task_Des"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="268dp"
        android:hint="@string/task_Des_h"
        android:inputType="text|textMultiLine"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="328dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/task_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="178dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="656dp"
        android:hint="@string/task_time_h"
        android:inputType="none"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="708dp"
        android:text="@string/task_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="708dp"
        android:layout_marginEnd="60dp"
        android:text="@string/task_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="668dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/task_time"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="407dp"
        android:layout_height="143dp"
        android:layout_marginTop="772dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                app:srcCompat="@drawable/hom" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="246dp"
                android:layout_height="47dp"
                app:srcCompat="@drawable/cal" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginTop="757dp"
        android:layout_marginEnd="173dp"
        android:clickable="false"
        android:contentDescription="@string/task_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="28dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

</androidx.constraintlayout.widget.ConstraintLayout>
