<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B3ED"
    tools:context=".home">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/home"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="371dp"
        android:layout_height="168dp"
        android:layout_marginTop="164dp"
        android:background="#A688DB"
        app:barrierMargin="@dimen/cardview_default_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="267dp"
        android:layout_height="34dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="72dp"
        android:text="@string/home_td"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="228dp"
        android:text="@string/home_tdn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="124dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="146dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="152dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/alkatra_semibold"
        android:text="@string/home_today"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="337dp"
        android:layout_height="350dp"
        android:layout_marginTop="412dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="362dp"
        android:layout_height="44dp"
        android:layout_marginTop="113dp"
        android:background="#D5C6F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="411dp"
        android:layout_height="112dp"
        android:layout_marginTop="768dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="174dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/hom" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="317dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/cal" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="60dp"
        android:layout_height="58dp"
        android:layout_marginStart="187dp"
        android:layout_marginTop="725dp"
        android:layout_marginEnd="166dp"
        android:clickable="false"
        android:contentDescription="@string/home_add"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>